# ros2-dds-performance-evaluation

./: README.md
cyclone_humble/: Dockerfile.ros2.humble.cyclone  docker-compose.yml  ros_publisher_entrypoint.sh
diagram_scripts/: diff_dds_compare_binary_latency.py  diff_dds_compare_string_latency.py  diff_dds_imu.py  packet_loss_finder_binary.py  packet_loss_finder_imu.py  packet_loss_finder_string.py  sd_vs_dd_same_dds.py  sd_vs_dd_same_dds_imu.py  sd_vs_dd_same_dds_jetson.py  sd_vs_dd_same_dds_string.py  sd_vs_dd_transfer_rate.py
eprosima_humble/: Dockerfile.ros2.humble.eprosima  binary_data.yaml  docker-compose.yml  imu_data.yaml  ros_publisher_entrypoint.sh  string_data.yaml
humble_base_image/: Dockerfile.ros2.humble.base  docker-compose.yml  experiment_dds_performance_script_binary.sh  experiment_dds_performance_script_imu.sh  experiment_dds_performance_script_string.sh  imu.txt  intermidiate_process_time_calculator.sh  transfer_rate_publisher.sh
humble_base_image/hare_robot_interfaces/: CMakeLists.txt  package.xml
humble_base_image/hare_robot_interfaces/msg/: Binaryfile.msg  Header.msg  Image.msg  Imu.msg  LedStateArray.msg  StringTimestamp.msg  TurtleArray.msg
humble_base_image/hare_robot_interfaces/srv/: CatchTurtle.srv  SetLed.srv
rti_connext_arm/: Dockerfile.ros2.humble.connext.arm  docker-compose.yml  imu_stream_bridge.xml  ros_publisher_entrypoint.sh  routing_service_entrypoint.sh  rticommon.sh  rtiroutingservice  string_stream_bridge.xml
rti_connext_laptop/: Dockerfile.ros2.humble.connext  camera_stream_bridge.xml  docker-compose.yml  (+1 more)
(+41 files in other folders)
